# hydrosensordesign

./: .gitignore  compare_bangladesh.ipynb  compare_brazil.ipynb  compare_huc6_texas_gulf.ipynb  delet_later.ipynb  glofas_processing_utils.py  pyproject.toml  sensor_network_utils.py
hydrosensordesign/: __init__.py  utils.py
hydrosensordesign/selection/: __init__.py  basin_qr.py  core.py  global_qr.py  qr.py
